--- a/src/main/resources/templates/admin/user-details.html
+++ b/src/main/resources/templates/admin/user-details.html
@@ -59,16 +59,7 @@
             </div>
         </div><br>
 
-        <a data-remodal-target="modal-edit" class="btn btn-primary" th:href="'/adminpage/user/' + ${user.id} + '/edit'" style="width: 140px;">Редактировать</a><br><br>
-
-        <div class="remodal text-center" data-remodal-id="modal-edit">
-            <button data-remodal-action="close" class="remodal-close"></button>
-            <h1>Подтверждение</h1>
-            <p>Вы действительно хотите изменить данные пользователя?</p>
-            <a class="remodal-confirm" th:href="'/adminpage/user/' + ${user.id} + '/edit'" onclick="setTimeout(function(){window.close()}, 1)" >Да</a>
-            <button data-remodal-action="cancel" class="remodal-cancel">Нет</button>
-        </div>
-
+        <a class="btn btn-primary" th:href="'/adminpage/user/' + ${user.id} + '/edit'" style="width: 140px;">Редактировать</a><br><br>
         <a data-remodal-target="modal-remove" class="btn btn-danger" style="width: 140px;">Удалить</a>
         
         <div class="remodal text-center" data-remodal-id="modal-remove">
@@ -76,7 +67,7 @@
             <h1>Подтверждение</h1>
             <p>Вы действительно хотите удалить пользователя?<br>Данное действие невозможно будет отменить.</p>
             <form th:action="'/adminpage/' + ${user.id} + '/remove'" method="post" id="secretKey" style="display: none;"></form>
-            <a class="remodal-confirm" href="#" onclick="document.getElementById('secretKey').submit();">Да, удалить</a>
+            <a class="remodal-confirm mr-4" href="#" onclick="document.getElementById('secretKey').submit();">Да, удалить</a>
             <button data-remodal-action="cancel" class="remodal-cancel">Нет</button>
         </div>
 
