--- a/src/main/resources/templates/blocks/collapses.html
+++ b/src/main/resources/templates/blocks/collapses.html
@@ -2,7 +2,7 @@
     <div class="collapse" id="collapseCAPS">
         <div class="card card-body">
             <p><u>Период прохождений:</u> один раз в месяц</p>
-            <p>По результатам прохождения формируются значения <b>частоты</b> и <b>интенсивности</b> проявления индивидуальных симптомов расстройства.</p>
+            <p class="mb-0">По результатам прохождения формируются значения <b>частоты</b> и <b>интенсивности</b> проявления индивидуальных симптомов расстройства.</p>
         </div>
     </div><br>
 </div>
@@ -12,7 +12,7 @@
         <div class="card card-body">
             <p><u>Период прохождений:</u> один раз в неделю</p>
             По результатам прохождения формируются следующие результаты:<br>
-            <ol>
+            <ol class="mb-0">
                 <li><b>Шкала «вторжение» (IN)</b> - позволяет выявить ночные кошмары, навязчивые мысли, связанные с травмирующим событием</li>
                 <li><b>Шкала «избегание» (AV)</b> - позволяет выявить симптомы избегания, включающие попытки смягчения или избегания переживаний, связанных с воздействием кризисного события</li>
                 <li><b>Шкала «физиологическое возбуждение» (AR)</b> - позволяет выявить злость и раздражительность, гипертрофированную реакцию испуга, психофизиологическое возбуждение, обусловленное воспоминаниями о событии, бессоницу. </li>
@@ -25,7 +25,7 @@
     <div class="collapse" id="collapseBHS">
         <div class="card card-body">
             <p><u>Период прохождений:</u> один раз в неделю</p>
-            <p>По результатам прохождения оценивается выраженность негативного отношения по отношению к собственному будущему.</p>
+            <p class="mb-0">По результатам прохождения оценивается выраженность негативного отношения по отношению к собственному будущему.</p>
         </div>
       </div><br>
 </div>
@@ -34,7 +34,7 @@
     <div class="collapse" id="collapseTOP8">
         <div class="card card-body">
             <p><u>Период прохождений:</u> один раз в неделю</p>
-            <p>Помогает оценить, насколько мешали симптомы на прошлой неделе.</p>
+            <p class="mb-0">Помогает оценить, насколько мешали симптомы на прошлой неделе.</p>
         </div>
       </div><br>
 </div>
