--- a/src/main/resources/templates/user/questionnaires/questionnaires-list-results.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-list-results.html
@@ -21,48 +21,73 @@
                 <div class="col-md-8" data-toggle="collapse" href="#collapseCAPS" role="button" aria-expanded="false" aria-controls="collapseCAPS">
                     <b><p data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике" th:text="'1. ' + ${fullNames[0]}"></p></b>
                 </div>
-                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='CAPS')}" class="btn btn-primary w-50">Подробнее</a></div>
+                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='CAPS')}" class="btn btn-primary w-50" id="btnCAPS">Подробнее</a></div>
             </div>
         </div>
+        <div th:if="${nullResultsCAPS}" style="color: red">
+            <p class="mb-1">Пока нет пройденных опросов</p>
+        </div>
         <div th:insert="blocks/collapses :: collapseCAPS"></div>
+
 
         <div class="p-3 mb-2 bg-light text-dark">
             <div class="row">
                 <div class="col-md-8" data-toggle="collapse" href="#collapseIESR" role="button" aria-expanded="false" aria-controls="collapseIESR">
                     <b><p data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике" th:text="'2. ' + ${fullNames[1]}"></p></b>
                 </div>
-                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='IESR')}" class="btn btn-primary w-50">Подробнее</a></div>
+                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='IESR')}" class="btn btn-primary w-50" id="btnIESR">Подробнее</a></div>
             </div>
         </div>
+        <div th:if="${nullResultsIESR}" style="color: red">
+            <p class="mb-1">Пока нет пройденных опросов</p>
+        </div>
         <div th:insert="blocks/collapses :: collapseIESR"></div>
+
 
         <div class="p-3 mb-2 bg-light text-dark">
             <div class="row">
                 <div class="col-md-8" data-toggle="collapse" href="#collapseBHS" role="button" aria-expanded="false" aria-controls="collapseBHS">
                     <b><p data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике" th:text="'3. ' + ${fullNames[2]}"></p></b>
                 </div>
-                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='BHS')}" class="btn btn-primary w-50">Подробнее</a></div>
+                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='BHS')}" class="btn btn-primary w-50" id="btnBHS">Подробнее</a></div>
             </div>
         </div>
+        <div th:if="${nullResultsBHS}" style="color: red">
+            <p class="mb-1">Пока нет пройденных опросов</p>
+        </div>
         <div th:insert="blocks/collapses :: collapseBHS"></div>
+
 
         <div class="p-3 mb-2 bg-light text-dark">
             <div class="row">
                 <div class="col-md-8" data-toggle="collapse" href="#collapseTOP8" role="button" aria-expanded="false" aria-controls="collapseTOP8">
                     <b><p data-toggle="tooltip" data-placement="bottom" title="Нажмите, чтобы открыть/закрыть информацию о данном опроснике" th:text="'4. ' + ${fullNames[3]}"></p></b>
                 </div>
-                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='TOP8')}" class="btn btn-primary w-50">Подробнее</a></div>
+                <div class="col-md-4 text-center"><a th:href="@{/questionnaires/results/{name}(name='TOP8')}" class="btn btn-primary w-50" id="btnTOP8">Подробнее</a></div>
             </div>
+        </div>
+        <div th:if="${nullResultsTOP8}" style="color: red">
+            <p class="mb-1">Пока нет пройденных опросов</p>
         </div>
         <div th:insert="blocks/collapses :: collapseTOP8"></div>
 
     </div>
-   
-    <div th:insert="blocks/footer :: footer"></div>
 
     <script>
         $('[data-toggle="tooltip"]').tooltip()
     </script>
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/ let nullResultsCAPS = /*[[ ${nullResultsCAPS} ]]*/ 'nullCAPS' /*]]*/;
+        /*<![CDATA[*/ let nullResultsIESR = /*[[ ${nullResultsIESR} ]]*/ 'nullIESR' /*]]*/;
+        /*<![CDATA[*/ let nullResultsBHS = /*[[ ${nullResultsBHS} ]]*/ 'nullBHS' /*]]*/;
+        /*<![CDATA[*/ let nullResultsTOP8 = /*[[ ${nullResultsTOP8} ]]*/ 'nullTOP8' /*]]*/;
+
+        if (nullResultsCAPS == true) $('#btnCAPS').attr('class', $('#btnCAPS').attr('class')+ ' disabled');
+        if (nullResultsIESR == true) $('#btnIESR').attr('class', $('#btnIESR').attr('class')+ ' disabled');
+        if (nullResultsBHS == true) $('#btnBHS').attr('class', $('#btnBHS').attr('class') + ' disabled');
+        if (nullResultsTOP8 == true) $('#btnTOP8').attr('class', $('#btnTOP8').attr('class')+ ' disabled');
+  </script>
     
 </body>
 
