--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,7 +1,7 @@
 <div th:fragment="footer">
-    <footer class="text-body-secondary py-5">
+    <footer>
 
-        <div class="container">
+        <div class="container py-4">
           <p><a href="#">Вернуться наверх</a></p>
         </div>
 
