--- a/src/main/resources/templates/admin/person-edit.html
+++ b/src/main/resources/templates/admin/person-edit.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="StyleSheet" href="https://bootstraptema.ru/plugins/2016/remodal/remodal-default-theme.css" />
     <script src="https://bootstraptema.ru/plugins/jquery/jquery-1.11.3.min.js"></script>
     <script src="https://bootstraptema.ru/plugins/2016/remodal/remodal.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/inputGroupText.css" />
 </head>
 
 <body>
@@ -22,13 +23,13 @@
             <input type="hidden" th:field="*{password}"/>
             <input type="hidden" th:field="*{role}"/>
             
-            <div class="text-left" th:if="${#fields.hasErrors('sername')}" th:errors="*{sername}">Sername Error</div>
+            <div class="text-justify" th:if="${#fields.hasErrors('sername')}" th:errors="*{sername}">Sername Error</div>
             <div class="form-group row">
                 <label class="input-group-text">Фамилия</label>
                 <div class="col"> <input type="text" th:field="*{sername}" class="form-control" placeholder="Фамилия" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
             </div>
 
-            <div class="text-left" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
+            <div class="text-justify" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
             <div class="form-group row">
                 <label class="input-group-text">Имя</label>
                 <div class="col"> <input type="text" th:field="*{name}" class="form-control" placeholder="Имя" oninput="this.value = this.value[0].toUpperCase() + this.value.slice(1).toLowerCase()"/> </div>
@@ -42,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="text-left" th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">Gender Error</div> 
+            <div class="text-justify" th:if="${#fields.hasErrors('gender')}" th:errors="*{gender}">Gender Error</div> 
             <div class="form-group row">
                 <label class="input-group-text">Пол</label>
                 <div class="col-md-1"></div>
@@ -58,13 +59,13 @@
                 <div class="col-md-2"></div>
             </div>
 
-            <div class="text-left" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Birthday Error</div> 
+            <div class="text-justify" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}">Birthday Error</div> 
             <div class="form-group row">
                 <label class="input-group-text">Дата рождения</label>
                 <div class="col"> <input type="date" th:field="*{birthday}" class="form-control" min="1940-01-01" max="2020-01-01"/> </div>
             </div>
             
-            <div class="text-left" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
+            <div class="text-justify" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
             <div class="form-group row">
                 <label class="input-group-text">Почта</label>
                 <div class="col"> <input type="email" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com"/> </div>
@@ -104,18 +105,4 @@
 
     </div>
 </body>
-
-<style>
-
-    .input-group-text {
-        width: 30%;
-    }
-
-    .text-left {
-        color: red; 
-        margin-left: 32%;
-    }
-
-</style>
-
 </html>
