--- a/src/main/resources/templates/admin/tables/admins-table.html
+++ b/src/main/resources/templates/admin/tables/admins-table.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/scrollTable.css" />
 </head>
 
 <body>
@@ -31,26 +32,27 @@
         </div>
         <br>
 
-        <table class="table table-bordered table-hover">
-            <thead>
-                <th th:each="h : ${headers}" th:text="${h}"/>
-            </thead>
-            <tbody id="adminsTable">
-                <tr th:each="admin, iter : ${admins}">
-                    <td class="filterData" th:text="${iter.index}+1"></td>
-                    <td class="filterData" th:text="${admin.sername}"></td>
-                    <td class="filterData" th:text="${admin.name}"></td>
-                    <td class="filterData" th:text="${admin.patronymic}"></td>
-                    <td class="filterData" th:text="${admin.gender}"></td>
-                    <td class="filterData" th:text="${admin.birthday}"></td>
-                    <td class="filterData" th:text="${admin.email}"></td>
-                    <td><a th:href="'/adminpage/admin/' + ${admin.id} + '/edit'">Редактировать</a></td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="scrollable-table">
+            <table class="table table-bordered table-hover myTable">
+                <thead>
+                    <th th:each="h : ${headers}" th:text="${h}"/>
+                </thead>
+                <tbody id="adminsTable">
+                    <tr th:each="admin, iter : ${admins}">
+                        <td class="filterData" th:text="${iter.index}+1"></td>
+                        <td class="filterData" th:text="${admin.sername}"></td>
+                        <td class="filterData" th:text="${admin.name}"></td>
+                        <td class="filterData" th:text="${admin.patronymic}"></td>
+                        <td class="filterData" th:text="${admin.gender}"></td>
+                        <td class="filterData" th:text="${admin.birthday}"></td>
+                        <td class="filterData" th:text="${admin.email}"></td>
+                        <td><a th:href="'/adminpage/admin/' + ${admin.id} + '/edit'">Редактировать</a></td>
+                    </tr>
+                </tbody>
+            </table>  
+        </div>
+        
     </div>
-
-    <div th:insert="blocks/footer :: footer"></div>
 
     <script> 
         $(document).ready(function(){
@@ -69,5 +71,4 @@
     </script>
 
 </body>
-
 </html>
