--- a/src/main/resources/templates/general/change-password.html
+++ b/src/main/resources/templates/general/change-password.html
@@ -5,6 +5,7 @@
     <title>Change Password</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/inputGroupText.css" />
 </head>
 
 <body>
@@ -23,7 +24,7 @@
                 </div>
             </div>
 
-            <div th:if="${errorLastPassword}" style="color: red">
+            <div th:if="${errorLastPassword}" class="text-justify">
                 Старый пароль введен неверно!<br><br>
             </div> 
 
@@ -35,10 +36,10 @@
                 </div>
             </div> 
 
-            <div th:if="${errorNewPassword}" style="color: red">
+            <div th:if="${errorNewPassword}" class="text-justify">
                 Введенные пароли не совпадают!<br><br>
             </div> 
-            <div th:if="${errorSuitablePassword}" style="color: red">
+            <div th:if="${errorSuitablePassword}" class="text-justify">
                 Новый пароль должен состоять минимум из 8 символов и содержать хотя бы одну цифру, заглавную и строчную латинские буквы.<br>
             </div> 
 
@@ -48,13 +49,4 @@
 
     </div>
 </body>
-
-<style>
-
-    .input-group-text {
-        width: 30%;
-    }
-
-</style>
-
 </html>
