--- a/src/main/resources/templates/user/questionnaires/questionnaires-list.html
+++ b/src/main/resources/templates/user/questionnaires/questionnaires-list.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/tooltip.css" />
 </head>
 
 <body>
@@ -115,14 +116,4 @@
   </script>
     
 </body>
-
-<style>
-
-  .tooltip-inner {
-    background-color: #000000;
-    max-width: 40rem;
-  }
-
-</style>
-
 </html>
