add the ability to edit drug data for admins + add visibility status to the drug entity + changed the text on the user start page

--- a/src/main/resources/templates/admin/tables/admins-table.html
+++ b/src/main/resources/templates/admin/tables/admins-table.html
@@ -46,7 +46,7 @@
                         <td class="filterData" th:text="${admin.gender}"></td>
                         <td class="filterData" th:text="${admin.birthday}"></td>
                         <td class="filterData" th:text="${admin.email}"></td>
-                        <td><a th:href="'/adminpage/admin/' + ${admin.id} + '/edit'">Редактировать</a></td>
+                        <td><a th:href="@{/adminpage/{role}/{id}/edit(id=${admin.id}, role='admin')}">Редактировать</a></td>
                     </tr>
                 </tbody>
             </table>  
