--- a/src/main/resources/templates/user/user-start-page.html
+++ b/src/main/resources/templates/user/user-start-page.html
@@ -22,7 +22,7 @@
 
                 <div th:if="${todayMarks}">
                     <div class="alert alert-warning text-justify">
-                        Есть лекарства, которые необходимо принять <b>сегодня</b>. Ниже можно отметить, приняты ли они. Если вы еще не приняли лекарство и не знаете, примете или нет, не отмечайте пока ничего.
+                        У вас есть лекарства, которые необходимо принять <b>сегодня</b>. Ниже вы можете отметить, приняты ли они. Если вы еще не приняли лекарство или не знаете, будет ли осуществлен его приём, не ставьте отметку.
                     </div>
 
                     <div th:each="m, iter : ${todayMarks}">
@@ -50,7 +50,7 @@
 
                 <div th:if="${missedMarks}">
                     <div class="alert alert-danger text-justify">
-                        Вы пропустили заполнение отметок. Ответьте, пожалуйста, приняты ли следующие лекарства в указанные даты?
+                        Вы не отметили, приняты ли лекарства. Отметьте, пожалуйста, осуществлен ли прием следующих лекарств в указанные даты.
                     </div>
 
                     <div th:each="m, iter : ${missedMarks}">
@@ -84,7 +84,7 @@
                 </div>
                 <div th:unless="${missedMarks}" class="text-center">
                     <div class="alert alert-success text-center" role="alert">
-                        У вас нет пропущенных отметок о принятии лекарств
+                        У вас нет пропущенных отметок о приёме лекарств.
                     </div>
                 </div>
                 
@@ -98,59 +98,59 @@
 
                 <div th:if="${allQuestionnairesCompleted}">
                     <div class="alert alert-success text-justify">
-                        На данный момент все необходимые опросники заполнены.
+                        В настоящее время все необходимые опросники заполнены.
                     </div>
                 </div>
 
                 <div th:if="${todayCAPS}">
                     <div class="alert alert-warning text-justify">
-                        Сегодня наступил срок для следующего прохождения опросника <b>CAPS</b>. 
-                        Для этого можно <a th:href="@{/questionnaires/{name}(name='CAPS')}" class="alert-link">перейти по ссылке</a>. 
+                        <b>Сегодня</b> необходимо пройти опросник <b>CAPS</b>. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='CAPS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
                 <div th:if="${missedCAPS}">
                     <div class="alert alert-danger text-justify">
                         С последнего прохождения опросника <b>CAPS</b> прошло более 30 дней. 
-                        Необходимо <a th:href="@{/questionnaires/{name}(name='CAPS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='CAPS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
 
                 <div th:if="${todayIESR}">
                     <div class="alert alert-warning text-justify">
-                        Сегодня наступил срок для следующего прохождения опросника <b>IES-R</b>. 
-                        Для этого можно <a th:href="@{/questionnaires/{name}(name='IESR')}" class="alert-link">перейти по ссылке</a>. 
+                        <b>Сегодня</b> необходимо пройти опросник <b>IES-R</b>. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='IESR')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
                 <div th:if="${missedIESR}">
                     <div class="alert alert-danger text-justify">
                         С последнего прохождения опросника <b>IES-R</b> прошло более одной недели. 
-                        Необходимо <a th:href="@{/questionnaires/{name}(name='IESR')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='IESR')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
 
                 <div th:if="${todayBHS}">
                     <div class="alert alert-warning text-justify">
-                        Сегодня наступил срок для следующего прохождения опросника <b>BHS</b>. 
-                        Для этого можно <a th:href="@{/questionnaires/{name}(name='BHS')}" class="alert-link">перейти по ссылке</a>. 
+                        <b>Сегодня</b> необходимо пройти опросник <b>BHS</b>. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='BHS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
                 <div th:if="${missedBHS}">
                     <div class="alert alert-danger text-justify">
                         С последнего прохождения опросника <b>BHS</b> прошло более одной недели. 
-                        Необходимо <a th:href="@{/questionnaires/{name}(name='BHS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='BHS')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
 
                 <div th:if="${todayTOP8}">
                     <div class="alert alert-warning text-justify">
-                        Сегодня наступил срок для следующего прохождения опросника <b>TOP-8</b>. 
-                        Для этого можно <a th:href="@{/questionnaires/{name}(name='TOP8')}" class="alert-link">перейти по ссылке</a>. 
+                        <b>Сегодня</b> необходимо пройти опросник <b>TOP-8</b>. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='TOP8')}" class="alert-link">перейти по ссылке</a> для его заполнения.  
                     </div>
                 </div>
                 <div th:if="${missedTOP8}">
                     <div class="alert alert-danger text-justify">
                         С последнего прохождения опросника <b>TOP8</b> прошло более одной недели. 
-                        Необходимо <a th:href="@{/questionnaires/{name}(name='TOP8')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
+                        Вам необходимо <a th:href="@{/questionnaires/{name}(name='TOP8')}" class="alert-link">перейти по ссылке</a> для его заполнения. 
                     </div>
                 </div>
             </div>
