add new type of comment for filling out questionnaires + corrected pages with questionnaires + add patient entity

--- a/src/main/resources/templates/admin/user-details.html
+++ b/src/main/resources/templates/admin/user-details.html
@@ -47,7 +47,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <small class="text-muted">Почта</small>
+                    <small class="text-muted">Электронная почта</small>
                     <br><b><p th:text="${user.email}"/></b>
                 </div>
             </div>
