--- a/src/main/resources/templates/general/change-password.html
+++ b/src/main/resources/templates/general/change-password.html
@@ -5,6 +5,7 @@
     <title>Change Password</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/inputGroupText.css" />
 </head>
 
@@ -20,7 +21,8 @@
             <div class="form-group row">
                 <label class="input-group-text">Старый пароль</label>
                 <div class="col">
-                  <input type="password" class="form-control" name="lastPassword" th:value="${lastPassword}" required placeholder="Введите старый пароль">
+                    <input type="password" class="form-control" name="lastPassword" id="lastPassword" th:value="${lastPassword}" required placeholder="Введите старый пароль">
+                    <a href="#" class="last-password-control"></a>
                 </div>
             </div>
 
@@ -31,8 +33,9 @@
             <div class="form-group row">
                 <label class="input-group-text" style="height: 50%;">Новый пароль</label> 
                 <div class="col">
-                  <input type="password" class="form-control" name="newPassword" th:value="${newPassword}" required placeholder="Введите новый пароль">
-                  <input type="password" class="form-control" name="newPasswordRepeat" th:value="${newPasswordRepeat}" required placeholder="Повторите новый пароль" style="margin-top: 1rem;">
+                    <input type="password" class="form-control" name="newPassword" id="newPassword" th:value="${newPassword}" required placeholder="Введите новый пароль">
+                    <a href="#" class="new-password-control"></a>
+                    <input type="password" class="form-control" name="newPasswordRepeat" th:value="${newPasswordRepeat}" required placeholder="Повторите новый пароль" style="margin-top: 1rem;">
                 </div>
             </div> 
 
@@ -48,5 +51,49 @@
         </form>
 
     </div>
+
+    <script>
+        $('body').on('click', '.last-password-control', function(){
+            if ($('#lastPassword').attr('type') == 'password'){
+                $(this).addClass('view');
+                $('#lastPassword').attr('type', 'text');
+            } else {
+                $(this).removeClass('view');
+                $('#lastPassword').attr('type', 'password');
+            }
+            return false;
+        });
+
+        $('body').on('click', '.new-password-control', function(){
+            if ($('#newPassword').attr('type') == 'password'){
+                $(this).addClass('view');
+                $('#newPassword').attr('type', 'text');
+            } else {
+                $(this).removeClass('view');
+                $('#newPassword').attr('type', 'password');
+            }
+            return false;
+        });
+    </script>
+
 </body>
+
+<style>
+
+    .last-password-control, .new-password-control {
+        position: absolute;
+        top: 10px;
+        right: 30px;
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        background: url(https://snipp.ru/demo/495/view.svg) 0 0 no-repeat;
+    }
+
+    .last-password-control.view , .new-password-control.view {
+        background: url(https://snipp.ru/demo/495/no-view.svg) 0 0 no-repeat;
+    }
+
+</style>
+
 </html>
