--- a/src/main/resources/templates/general/profile-edit.html
+++ b/src/main/resources/templates/general/profile-edit.html
@@ -66,7 +66,7 @@
             
             <div  class="text-justify" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</div>
             <div class="form-group row">
-                <label class="input-group-text">Почта</label>
+                <label class="input-group-text">Электронная почта</label>
                 <div class="col"> <input type="email" th:field="*{email}" class="form-control" id="email" placeholder="name@example.com"/> </div>
             </div>
 
