--- a/src/main/resources/templates/general/profile-page.html
+++ b/src/main/resources/templates/general/profile-page.html
@@ -48,7 +48,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <small class="text-muted">Почта</small>
+                    <small class="text-muted">Электронная почта</small>
                     <br><b><p th:text="${person.email}"/></b>
                 </div>
             </div>
