--- a/src/main/resources/templates/user/questionnaires/CAPS.html
+++ b/src/main/resources/templates/user/questionnaires/CAPS.html
@@ -12,18 +12,18 @@
     <header th:insert="blocks/headers :: header-user-page"></header>
 
     <div class="container mt-4">
-        <h2 class="text-center"> Опросник CAPS </h2>
+        <h2 class="text-center"> Опросник CAPS </h2><br>
 
         <form th:action="@{/questionnaires/{name}(name='CAPS')}" th:object="${answers}" method="post">
 
-            <div th:each="question, iter1 : ${questions}">
-                <p th:text="${iter1.count} + '. ' + ${question}"/>
+            <div th:each="question, iter1 : ${questions}"  class="card card-body mb-4">
+                <b class="mb-3"><span th:text="${iter1.count} + '. ' + ${question}"/></b>
                 <div>
                     <div th:each="answerOption, iter2 : ${answerOptions[iter1.index]}">
                     <input type="radio" th:id="${iter2.index}" th:field="*{answers[__${iter1.index}__]}" th:value="__${iter2.index}__" required/>
                     <label th:for="${iter2.index}" th:text="${answerOption}"/>
                     </div>
-                </div><br>
+                </div>
             </div> 
 
             <button type="submit" class="btn btn-dark">Сохранить</button>
